--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     compile 'info.android15.nucleus:nucleus-support-v7:4.0.0'
 
-    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    compile 'com.elyeproj.libraries:loaderviewlibrary:1.2.2'
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
